Fix form wrapping on small displays.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ p {
     margin-top: 1em;
 }
 
+span{
+    white-space: nowrap;
+}
+
 p {
     font-size: 20px;
 }
